# VINS-Mobile-Android

./: README.md
VINS_Mobile_AndroidPort/app/: CMakeLists.txt  build.gradle
VINS_Mobile_AndroidPort/app/libs/VINS-Mobile-master/: CMakeLists.txt
VINS_Mobile_AndroidPort/app/libs/VINS-Mobile-master/VINS_ThirdPartyLib/: CMakeLists.txt
VINS_Mobile_AndroidPort/app/libs/VINS-Mobile-master/VINS_ThirdPartyLib/ceres-solver/include/ceres/internal/: config.h
VINS_Mobile_AndroidPort/app/libs/VINS-Mobile-master/VINS_ThirdPartyLib/ceres-solver/jni/: Android.mk  Application.mk
VINS_Mobile_AndroidPort/app/libs/VINS-Mobile-master/VINS_ios/: CMakeLists.txt  VINS.cpp  VINS.hpp  feature_manager.cpp  feature_tracker.cpp  global_param.cpp  global_param.hpp  inital_sfm.cpp  initial_aligment.cpp
VINS_Mobile_AndroidPort/app/libs/VINS-Mobile-master/VINS_ios/ObjectiveC/: ViewController.mm
VINS_Mobile_AndroidPort/app/libs/VINS-Mobile-master/VINS_ios/delaunay/: CMakeLists.txt
VINS_Mobile_AndroidPort/app/libs/VINS-Mobile-master/VINS_ios/loop/: CMakeLists.txt  keyframe.h
VINS_Mobile_AndroidPort/app/src/main/: AndroidManifest.xml
VINS_Mobile_AndroidPort/app/src/main/cpp/VINS_Android/: CMakeLists.txt  ViewController.cpp  ViewController.hpp
VINS_Mobile_AndroidPort/app/src/main/cpp/jni/: nativelib.cpp
VINS_Mobile_AndroidPort/app/src/main/java/com/thkoeln/jmoeller/vins_mobile_androidport/: MainActivity.java  VinsJNI.java
VINS_Mobile_AndroidPort/app/src/main/res/layout/: activity_main.xml
VINS_Mobile_AndroidPort/app/src/main/res/values/: strings.xml
